--- a/Example/Base.lproj/Main.storyboard
+++ b/Example/Base.lproj/Main.storyboard
@@ -272,7 +272,7 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H3T-pM-BZD" customClass="EasyStepIndicator" customModule="EasyStepIndicator" customModuleProvider="target">
                                 <rect key="frame" x="40" y="209.5" width="334" height="477"/>
-                                <color key="backgroundColor" systemColor="tertiaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="H3T-pM-BZD" secondAttribute="height" multiplier="4" id="Qh3-NZ-ILd"/>
                                     <constraint firstAttribute="width" secondItem="H3T-pM-BZD" secondAttribute="height" multiplier="0.7" id="XbW-YF-cPq"/>
